--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     package="com.example.nreaderapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -20,16 +22,19 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activities.ForgotPasswordActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.ProfileEditActivity"
             android:exported="false" />
         <activity
             android:name=".activities.ProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.admin.PdfViewActivity"
+            android:name=".activities.PdfViewActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.admin.PdfDetailActivity"
+            android:name=".activities.PdfDetailActivity"
             android:exported="false" />
         <activity
             android:name=".activities.admin.PdfEditActivity"
